Move all constants to config.yml. Add static method getFromConfig to DatabaseInitParams. Refactor all according to the comments